tests/analyzer/invalid/0000_unused_parameters.tj
def unused_param(x: int, y: int) -> int {
    return x
}

def another_unused(a: int, b: int, c: int) -> int {
    return a + c
}
